--- a/demo/src/main/resources/static/admin.html
+++ b/demo/src/main/resources/static/admin.html
@@ -6,8 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>管理后台</title>
-    <link href="./css/sidebars.css" rel="stylesheet">
-    <link href="./css/review.css" rel="stylesheet">
+
+<!--    .custom-gap {-->
+<!--    margin-bottom: 15px; /* Your desired space */-->
+<!--    }-->
+    <link href="css/sidebars.css" rel="stylesheet">
+    <link href="css/review.css" rel="stylesheet">
 </head>
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -71,7 +75,7 @@
 
 <main>
     <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+        <a href="/static" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
             <span class="fs-4">商城管理系统后台</span>
         </a>
@@ -111,7 +115,7 @@
         <hr>
         <div class="dropdown">
             <a id="loginUser" href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="./image/tom.jpg" alt="" width="32" height="32" class="rounded-circle me-2">
+                <img src="image/tom.jpg" alt="" width="32" height="32" class="rounded-circle me-2">
                 <strong>邹嘉豪</strong>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
@@ -159,7 +163,7 @@
                         <div class="col"></div>
                         <div class="col-auto">
                             <button class="btn btn-success" data-bs-toggle="modal"
-                                    data-bs-target="#itemModal" data-bs-whatever="@mdo" data-bs-type="add">添加商品</button>
+                                    data-bs-target="#itemModal" data-bs-whatever="@mdo" data-bs-type="add" style="margin-right:125px">添加商品</button>
                         </div>
                     </div>
 
@@ -203,8 +207,8 @@
 
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.js"></script>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./js/sidebars.js"></script>
-<script src="./js/review.js"></script>
+<script src="js/sidebars.js"></script>
+<script src="js/review.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script>
@@ -485,9 +489,30 @@
             }
         })
     }
-    function cout_user()
-    {
 
+        function uploadFile() {
+        console.log("upload file");
+            const file=$('#imgUpload')[0].files[0];
+            const formData=new FormData();
+            formData.append('file',file);
+            $.ajax({
+                url:'/common/uploadFile',
+                type:'post',
+                data:formData,
+                contentType:false,
+                processData:false,
+                success:function (res)
+                {
+                    console.log(res);
+                    $('#imgPreview').attr('src',res.data);
+                },
+                error:
+                function (res)
+                {
+                    console.log(res);
+                }
+
+            })
     }
 
 </script>
@@ -529,8 +554,12 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="img" class="col-form-label">商品图片:</label>
-                        <input type="text" class="form-control" id="img">
+                        <label for="img" class="form-label">商品图片:</label>
+                        <div id="img" class="input-group">
+                            <input class="form-control" type="file" id="imgUpload" onchange="uploadFile()">
+                            <img src="" id="imgPreview" alt="商品预览" class="img-thumbnail">
+                        </div>
+
                     </div>
                 </form>
             </div>
