--- a/demo/src/main/resources/static/login.html
+++ b/demo/src/main/resources/static/login.html
@@ -3,20 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malllogin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>login</title>
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+<!--    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">-->
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+
     <style>
 
         html, body{
             height:100%
         }
     </style>
+    <style>
+        body {
+            background-image: url('image/Login_bg.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .form-container {
+            margin-right: 120px; /* Adjust this value as needed */
+        }
+        .custom-gap {
+            margin-bottom: 15px; /* Your desired space */
+        }
+    </style>
+
+
 </head>
 <body>
 <div class="container-fluid h-100">
-    <div class="row justify-content-center align-items-center h-100">
-        <div class="card col-4" >
+<!--    <div class="row justify-content-center align-items-center h-100">-->
+    <div class="row justify-content-end align-items-center h-100">
+        <div class="card col-4 form-container" >
             <div class="card-header">
                 登录
             </div>
@@ -33,7 +54,7 @@
                         <input type="password" class="form-control" id="exampleInputPassword1" >
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group custom-gap">
                         <label for="verifyCode">Captcha</label>
                         <div class="input-group" >
                             <input type="number" class="form-control" id="verifyCode">
@@ -45,6 +66,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="button" class="btn btn-primary" onclick="navigate()">Register</button>
                 </form>
             </div>
         </div>
@@ -71,16 +93,27 @@
 
                 success: function(result) {
                     if (result.code == 200) {
-<!--                        window.location.href = "/myprofile.html";-->
+                    // window.location.href = "/review.html";
                             window.location.href="/admin.html";
-                    } else {
+                    }
+                    {
 
+                        if(result.message=="验证码错误")
+                        {
+                            $('#captcha').attr('src', '/common/captcha?' + new Date().getTime());
+                        }
                         alert(result.message);
                     }
                 }
             });
         });
     });
+</script>
+
+<script>
+    function navigate() {
+        window.location.href = 'register.html';
+    }
 </script>
 </body>
 
