--- a/demo/src/main/resources/static/review.html
+++ b/demo/src/main/resources/static/review.html
@@ -148,7 +148,10 @@
     <div class="right-arrow-wrap">
       <div class="arrow"></div>
     </div>
+    <button class="add-user-button" onclick="addUser()">Add User</button>
+    <button class="delete-user-button" onclick="deleteUser()">Delete User</button>
   </div>
+
 </div>
 
 <script>
@@ -182,7 +185,6 @@
         words: "Hello, I'm a web developer. I have been working as a web developer for 5 years. I have worked in many companies and I have worked as a freelancer. I have worked in a team and I have worked alone. I have worked in a big company and I have worked in a small one."
       },
       {
-        // photo: "url('https://cdn.pixabay.com/photo/2012/10/26/02/12/actor-63082_960_720.jpg')",
         photo: "url('./image/hacker.jpg')",
         name: "Julius Grohn",
         profession: "Designer",
